--- a/alertaweb/alertas/templates/alertas/base.html
+++ b/alertaweb/alertas/templates/alertas/base.html
@@ -13,11 +13,18 @@
 {% block navbar %}
 <nav class="navbar navbar-default">
   <div class="container-fluid">
+
     <div class="navbar-header">
             <a class="navbar-brand" href="/"><img src="http://i.imgur.com/SDUcKwC.png"></img></a>
       <a class="navbar-brand" href="/">Alerta Web</a>
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-col" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
     </div>
-    <div>
+    <div class="collapse navbar-collapse" id="nav-col">
       <ul class="nav navbar-nav">
         <li class="divider-vertical" style ="height: 50px;border-left: 1px solid #F2F2F2;border-right: 1px solid #FFF;"></li>
         <li><a href="/">Mapa de Alertas</a></li>
